cli/test/fixtures/bad/roboto_default.dart
// Bad: ThemeData without textTheme uses default Roboto
final t1 = ThemeData();
final t2 = ThemeData(colorScheme: cs);
